--- a/travel_company_app/requirements.txt
+++ b/travel_company_app/requirements.txt
@@ -1,6 +1,5 @@
 Django==1.8
-django-mysql==2.4.1
-mysql-connector-python==8.0.13
+mysqlclient
 Pillow==2.9.0
 protobuf==3.6.1
 pytz==2018.7
@@ -12,7 +11,6 @@ pytz==2018.7
 six==1.11.0
 dj-database-url==0.5.0
 django-heroku==0.3.1
-django-mysql==2.4.1
 gunicorn==19.9.0
 protobuf==3.6.1
 psycopg2==2.8.2
