--- a/travel_company_app/requirements.txt
+++ b/travel_company_app/requirements.txt
@@ -19,5 +19,5 @@ six==1.11.0
 whitenoise==4.1.2
 dj-database-url==0.5.0
 python-decouple == 3.1
-django-service-objects
+django-service-objects == 0.4.0
 pymysql
